<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Sunshine</string>
	<string name="title_activity_forecast_details">Details</string>
	<string name="title_activity_settings">Settings</string>

	<string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_map">Show map</string>
	<string name="action_share">Share</string>

	<string name="pref_label_location">Location</string>
	<string name="pref_key_location" translatable="false">pref_location</string>
	<string name="pref_location_default" translatable="false">50566</string>
	<string name="pref_key_units" translatable="false">pref_units_key</string>
	<string name="pref_label_units">Units</string>
	<string name="pref_units_default" translatable="false">@string/pref_units_metric</string>
	<string name="pref_units_metric" translatable="false">metric</string>
	<string name="pref_units_imperial" translatable="false">imperial</string>

	<string name="sharing_hash_tag" translatable="false">#SunshineApp</string>

	<!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
	<string name="today">Today</string>

	<!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
	<string name="tomorrow">Tomorrow</string>

	<!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
	<string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

	<!-- Strings for formatting weather-related data -->
	<!-- Temperature format [CHAR LIMIT=5] -->
	<string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

	<!-- Wind speed formats -->
	<!-- Wind in mph [CHAR LIMIT=25] -->
	<string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

	<!-- Wind in kph [CHAR LIMIT=25] -->
	<string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

	<!-- Pressure format CHAR LIMIT=25] -->
	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

	<!-- Humidity format CHAR LIMIT=25]-->
	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

	<!-- Account type (for sync-adapter authenticator) -->
	<!-- SyncAdapter related -->
	<string name="sync_account_type" translatable="false">sunshine.example.com</string>
	<string name="content_authority" translatable="false">com.android.example.sunshine</string>

	<!-- Notification Format -->
	<string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
	<!-- Strings related to Notification preference -->
	<string name="pref_last_notification" translatable="false">last_notification</string>
	<string name="pref_key_notifications_enabled" translatable="false">pref_notifications_enabled</string>
	<string name="pref_label_notifications_enabled">Notifications enabled</string>
	<string name="pref_notifications_enabled_off">Disabled</string>
	<string name="pref_notifications_enabled_on">Enabled</string>
	<string name="pref_default_notifications_enabled" translatable="false">true</string>
</resources>
