<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference android:defaultValue="@string/pref_location_default"
	                    android:inputType="text"
	                    android:key="@string/pref_key_location"
	                    android:singleLine="true"
	                    android:title="@string/pref_label_location"/>

	<ListPreference android:defaultValue="@string/pref_units_default"
	                android:entries="@array/pref_units_entries"
	                android:entryValues="@array/pref_units_values"
	                android:key="@string/pref_key_units"
	                android:title="@string/pref_label_units"/>

	<CheckBoxPreference android:defaultValue="@string/pref_default_notifications_enabled"
	                    android:key="@string/pref_key_notifications_enabled"
	                    android:summaryOff="@string/pref_notifications_enabled_off"
	                    android:summaryOn="@string/pref_notifications_enabled_on"
	                    android:title="@string/pref_label_notifications_enabled"/>
</PreferenceScreen>